// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointsOrCash should render PointOrCash in preview mode 1`] = `
<div>
  <form
    className="cash-form"
    onSubmit={[Function]}
  >
    <StateManager
      className="form-select"
      defaultInputValue=""
      defaultMenuIsOpen={false}
      defaultValue={
        Object {
          "name": "",
          "tpg_valuation": 0,
        }
      }
      getOptionLabel={[Function]}
      getOptionValue={[Function]}
      onChange={[Function]}
      options={
        Object {
          "name": "Private airline",
          "tpg_valuation": 2,
          "type": "airline",
        }
      }
    />
    <p>
      Enter 
      Hotels
       Price
    </p>
    <CurrencyInput
      allowNegative={false}
      autoFocus={false}
      className="form-field"
      decimalSeparator="."
      inputType="text"
      onChange={[Function]}
      onChangeEvent={[Function]}
      precision="2"
      prefix=""
      selectAllOnFocus={false}
      suffix=""
      thousandSeparator=","
      value={0}
    />
    <p>
      Enter 
      Hotels
       Fees
    </p>
    <CurrencyInput
      allowNegative={false}
      autoFocus={false}
      className="form-field"
      decimalSeparator="."
      inputType="text"
      onChange={[Function]}
      onChangeEvent={[Function]}
      precision="2"
      prefix=""
      selectAllOnFocus={false}
      suffix=""
      thousandSeparator=","
      value={5.95}
    />
    <i>
      * Program Fees are set to 5.95 by default. Please update with
       
      Hotels
       Fees.
    </i>
    <button
      className="form-button"
      type="submit"
    >
      Calculate
    </button>
  </form>
</div>
`;

exports[`PointsOrCash should render PointOrCash in preview mode 2`] = `
<div>
  <form
    className="cash-form"
    onSubmit={[Function]}
  >
    <StateManager
      className="form-select"
      defaultInputValue=""
      defaultMenuIsOpen={false}
      defaultValue={
        Object {
          "name": "",
          "tpg_valuation": 0,
        }
      }
      getOptionLabel={[Function]}
      getOptionValue={[Function]}
      onChange={[Function]}
      options={
        Object {
          "name": "Private airline",
          "tpg_valuation": 2,
          "type": "airline",
        }
      }
    />
    <span
      id="loyalty-error"
    >
      Please select a Loyalty program
    </span>
    <p>
      Enter 
      Hotels
       Price
    </p>
    <CurrencyInput
      allowNegative={false}
      autoFocus={false}
      className="form-field"
      decimalSeparator="."
      inputType="text"
      onChange={[Function]}
      onChangeEvent={[Function]}
      precision="2"
      prefix=""
      selectAllOnFocus={false}
      suffix=""
      thousandSeparator=","
      value={0}
    />
    <span
      id="loyalty-error"
    >
      Please Enter the 
      Hotels
       Cost
    </span>
    <p>
      Enter 
      Hotels
       Fees
    </p>
    <CurrencyInput
      allowNegative={false}
      autoFocus={false}
      className="form-field"
      decimalSeparator="."
      inputType="text"
      onChange={[Function]}
      onChangeEvent={[Function]}
      precision="2"
      prefix=""
      selectAllOnFocus={false}
      suffix=""
      thousandSeparator=","
      value={5.95}
    />
    <i>
      * Program Fees are set to 5.95 by default. Please update with
       
      Hotels
       Fees.
    </i>
    <button
      className="form-button"
      type="submit"
    >
      Calculate
    </button>
  </form>
</div>
`;

exports[`PointsOrCash should render the PointsOrCash Component correctly 1`] = `
<div>
  <form
    className="cash-form"
    onSubmit={[Function]}
  >
    <StateManager
      className="form-select"
      defaultInputValue=""
      defaultMenuIsOpen={false}
      defaultValue={
        Object {
          "name": "",
          "tpg_valuation": 0,
        }
      }
      getOptionLabel={[Function]}
      getOptionValue={[Function]}
      onChange={[Function]}
      options={
        Object {
          "name": "Private airline",
          "tpg_valuation": 2,
          "type": "airline",
        }
      }
    />
    <p>
      Enter 
      Hotels
       Price
    </p>
    <CurrencyInput
      allowNegative={false}
      autoFocus={false}
      className="form-field"
      decimalSeparator="."
      inputType="text"
      onChange={[Function]}
      onChangeEvent={[Function]}
      precision="2"
      prefix=""
      selectAllOnFocus={false}
      suffix=""
      thousandSeparator=","
      value={0}
    />
    <p>
      Enter 
      Hotels
       Fees
    </p>
    <CurrencyInput
      allowNegative={false}
      autoFocus={false}
      className="form-field"
      decimalSeparator="."
      inputType="text"
      onChange={[Function]}
      onChangeEvent={[Function]}
      precision="2"
      prefix=""
      selectAllOnFocus={false}
      suffix=""
      thousandSeparator=","
      value={5.95}
    />
    <i>
      * Program Fees are set to 5.95 by default. Please update with
       
      Hotels
       Fees.
    </i>
    <button
      className="form-button"
      type="submit"
    >
      Calculate
    </button>
  </form>
</div>
`;
